--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,7 +7,7 @@
     src: url('digital_(mono).ttf') format('truetype');
 }
 body {
-	height: 6000px;
+	width: 100%;
 	padding: 0;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
     position: absolute;
@@ -24,16 +24,36 @@ body {
 
 :root{
 	/* theme */
-	--theme-panel-color: rgb(83, 92, 99);
+	/* --theme-panel-color: rgb(83, 92, 99);
 	--theme-desktop-color: #459dc3;
 	--theme-node-color: #3e4c57;
 	--io-bar-highlight-color: rgba(255, 128, 0, 1);
-	--io-bar-color: rgba(255, 255, 255, .4);
-	/* --io-bar-selected: rgb(255, 123, 0); */
-	--menu-bar-width: 160px;
-	--menu-bar-height: 24px;
+	--io-bar-color: rgba(255, 255, 255, .4); */
 }
 
+.content {
+	height: 6000px;
+	/* flex: 1 0 auto; */
+	width: 100%;
+	justify-content: center;
+	/* align-items: center; */
+
+	/* display: flex; */
+}
+
+.content > .title {
+	color: #ededed;
+	text-shadow: 0 0 30px #333;
+	display: flex;
+	font-size: 10em;
+	font-family: Arial, Helvetica, sans-serif;
+	justify-content: center;
+	align-items: center;
+}
+.content > .label {
+	align-items: flex-start;
+	color: #FF5722;
+}
 
 #renderer {
 	position: fixed;
@@ -42,6 +62,10 @@ body {
 	/* background-color: rgb(218, 218, 218); */
 	width: 3px;
 	height: 2px;
-	cursor: crosshair;
 	z-index: -1;
+}
+
+.github-corner {
+	position: fixed;
+	right: 0;
 }
